--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -1,8 +1,9 @@
 black==23.11.0
-mypy==1.7.0
+mypy==1.8.0
 pytest==7.4.3
 pytest-subtests==0.11.0
 isort==5.12.0
 requests == 2.31.0
 beautifulsoup4 == 4.12.2
+hypothesis == 6.100.1
 faker == 18.9.0
