Again change pytest setting

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -20,5 +20,5 @@ jobs:
         run: isort . --check --diff
       - name: "mypy"
         run: mypy
-      - name: "python -m pytest"
-        run: pytest
+      - name: "pytests"
+        run: python -m pytest
