--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-beautifulsoup4 == 4.12.2
-requests == 2.31.0
-click==8.1.7
 numpy==1.26.4
+requests==2.31.0
+loguru==0.5.3
+beautifulsoup4 == 4.12.2
+click==8.1.7
